Add routine template marketplace
